--- a/Project.toml
+++ b/Project.toml
@@ -9,15 +9,19 @@ PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
 
 [weakdeps]
 JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
+ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 
 [extensions]
 JutulDarcyExt = "JutulDarcy"
+ImageTransformationsExt = "ImageTransformations"
 
 [compat]
 Configurations = "0.17"
 JutulDarcy = "0.2.35"
+ImageTransformations = "0.10"
 PackageExtensionCompat = "1"
 julia = "1.10"
 
 [extras]
 JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
+ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
