--- a/Project.toml
+++ b/Project.toml
@@ -1,27 +1,29 @@
 name = "ConfigurationsJutulDarcy"
 uuid = "8c1f6541-c3b1-479a-a223-9e83eb45f3f9"
 authors = ["Grant Bruer gbruer15@gmail.com and contributors"]
-version = "0.0.3"
+version = "0.0.4"
 
 [deps]
 Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [weakdeps]
-JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
 
 [extensions]
-JutulDarcyExt = "JutulDarcy"
 ImageTransformationsExt = "ImageTransformations"
+JutulDarcyExt = "JutulDarcy"
 
 [compat]
 Configurations = "0.17"
-JutulDarcy = "0.2.35"
 ImageTransformations = "0.10"
+JutulDarcy = "0.2.35"
 PackageExtensionCompat = "1"
+StaticArrays = "1.9"
 julia = "1.10"
 
 [extras]
-JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
