--- a/test/Project.toml
+++ b/test/Project.toml
@@ -7,6 +7,7 @@ ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestReports = "dcd651b4-b50a-5b6b-8f22-87e9f253a252"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
 Aqua = "0.8"
